--- a/res/swappy.glade
+++ b/res/swappy.glade
@@ -60,7 +60,7 @@
   <object class="GtkApplicationWindow" id="paint-window">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="resizable">False</property>
+    <property name="resizable">False</property>   <!-- float -->
     <property name="window_position">center</property>
     <property name="show_menubar">False</property>
     <signal name="delete-event" handler="window_delete_handler" swapped="no"/>
@@ -71,7 +71,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkPaned">
+          <object class="GtkPaned" id="main-paned">
             <property name="width_request">100</property>
             <property name="height_request">80</property>
             <property name="visible">True</property>
@@ -269,6 +269,20 @@
                         <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="position">5</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="search-button">
+                        <property name="label" translatable="no"></property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="receives_default">False</property>
+                        <signal name="clicked" handler="search_button_clicked_handler" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">6</property>
                       </packing>
                     </child>
                     <style>
